# open-predictive-coder

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CHRONOHORN_KERNEL_BOUNDARY.md  EXPORT_ABI.md  architecture.md  downstream_patterns.md  frontier_pass.md  kernel_matrix.md  landscape.md  lineage.md  next_pass.md
docs/superpowers/specs/: 2026-04-01-decepticons-rebrand-design.md
examples/: README.md  quickstart.py
examples/projects/ancestor/hierarchical_predictive/: README.md  model.py  predictor.py  probe.py  smoke.py
examples/projects/bridge/agreement_export/: README.md  model.py  probe.py  smoke.py
examples/projects/bridge/feature_export/: README.md  model.py  probe.py  smoke.py
examples/projects/bridge/proxy_features/: README.md  model.py  probe.py  smoke.py
examples/projects/bridge/support_export/: README.md  model.py
examples/projects/bridge/teacher_export/: README.md  model.py  probe.py  smoke.py
examples/projects/byte_latent/patch_latent/: README.md  model.py  probe.py  smoke.py
examples/projects/causal/: shared.py
examples/projects/causal/cache_repair/: README.md  model.py
examples/projects/causal/exact_context_repair/: README.md  exact_context.py  run.py  smoke.py
examples/projects/causal/linear_correction/: README.md  model.py  smoke.py
examples/projects/causal/memory_stability/: README.md  model.py  smoke.py
examples/projects/causal/packed_memory_controller/: README.md  model.py  probe.py  smoke.py
examples/projects/causal/program_controller/: README.md  model.py  probe.py  smoke.py
examples/projects/causal/residual_repair/: README.md  model.py  smoke.py
examples/projects/causal/statistical_memory/: README.md  model.py  probe.py  smoke.py
examples/projects/causal_exact_context_like/: README.md  exact_context.py  run.py
examples/projects/causal_linear_correction_like/: README.md  model.py  smoke.py
examples/projects/causal_memory_stability_like/: README.md  model.py  smoke.py
examples/projects/causal_residual_repair_like/: README.md  model.py  smoke.py
examples/projects/noncausal/field_reconstruction/: README.md  model.py  probe.py  smoke.py
examples/projects/noncausal/payload_choice/: README.md  model.py  probe.py  smoke.py
examples/projects/noncausal/replay_fields/: README.md  model.py
examples/projects/oracle/bidirectional_analysis/: README.md  model.py  probe.py  smoke.py
examples/tools/diagnostics/: README.md  __init__.py  from_examples.py
src/decepticons/: __init__.py  artifacts_audits.py  causal_bank.py  memory_cache.py  memory_protocol.py  online_memory.py  statistical_backoff.py
src/open_predictive_coder/: __init__.py  bridge_export.py  bridge_features.py  causal_bank.py  ngram_memory.py  oracle_analysis.py
tests/: README.md  test_agreement_export_example.py  test_artifacts.py  test_artifacts_audits.py  test_bidirectional_analysis_example.py  test_bidirectional_context.py  test_boundary_surfaces.py  test_bridge_export.py  test_bridge_export_isolation.py  test_bridge_features.py  test_bridge_proxy_example.py  test_causal_adapter.py  test_causal_descendant_refactors.py  test_codecs.py  test_coder.py  test_control.py  test_delay.py  test_dependency_firewall.py  test_diagnostics_examples.py  test_eval.py  test_exact_context.py  test_example_projects.py  test_experts.py  test_factories.py  test_feature_export_example.py  test_field_reconstruction_example.py  test_frontier_boundaries.py  test_gating.py  test_hierarchical.py  test_hierarchical_predictive_example.py  test_hierarchical_views.py  test_kernel_project_split.py  test_learned_segmentation.py  test_linear_memory.py  test_memory_cache.py  test_metrics.py  test_mixed_memory.py  test_modulation.py  test_ngram_memory.py  test_noncausal_adapter.py  (+24 more)
