[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decepticons"
version = "0.1.0"
description = "Shared predictive substrate kernel for reusable model primitives and descendant systems."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Decepticons contributors"},
]
dependencies = [
  "numpy>=1.26",
]
keywords = [
  "predictive-coding",
  "reservoir-computing",
  "sequence-modeling",
  "compression",
  "bytes",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/asuramaya/decepticons"
Repository = "https://github.com/asuramaya/decepticons"

[project.scripts]
opc = "decepticons.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
