[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decepticons"
version = "0.1.0"
description = "Shared predictive substrate kernel for reusable model primitives and descendant systems."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Decepticons contributors"},
]
dependencies = [
  "numpy>=1.26",
]
keywords = [
  "predictive-coding",
  "reservoir-computing",
  "sequence-modeling",
  "compression",
  "bytes",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/asuramaya/decepticons"
Repository = "https://github.com/asuramaya/decepticons"

[project.scripts]
decepticons = "decepticons.cli:main"

[project.optional-dependencies]
torch = [
  "torch>=2.0",
]
metal = [
  "mlx>=0.25",
]
test = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]
exclude = ["examples/"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "I",    # isort
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "SIM",  # flake8-simplify
  "S",    # flake8-bandit (security)
]
ignore = [
  "E501",   # line length (handled by formatter)
  "E402",   # module-level import not at top — needed for sys.path setup in tests
  "S101",   # assert in non-test code
  "S603",   # subprocess without shell=True — checked manually
  "S607",   # partial executable path
  "B905",   # zip without strict
  "SIM102", # collapsible if — readability over compactness
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S106"]
